--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <title>Željko Blatešić | QR code component</title>
   </head>
   <body>    
+    <div class="container">
+      <img class="QR" src="images\image-qr-code.png" alt="QR code">
+      <h1>improve your front-end skills by building projectst</h1>
+      <p>Scan the QR code to visit Forntend mentor and take your coding skills to the next level</p>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/ZeljkoBlatesic1">Zeljko Blatesic</a>.
+    </div>
   </body>
 </html>
